chore: se inyecta string Resultado

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
             </div>
             <div id="resultado"></div>
         </div>
-
     </section>
+        <h2>Chart</h2>
+        <div class="grafica">
+            <canvas id="myChart"></canvas>
+            </div>
     </main>
 </body>
 </html>
